--- a/configs/trainer.yaml
+++ b/configs/trainer.yaml
@@ -6,7 +6,7 @@ trainer:
   num_sanity_val_steps: 0
   check_val_every_n_epoch: 1
   accelerator: gpu
-  devices: 1
+  devices: [1]
 
   callbacks:
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
