--- a/configs/retrieval.yaml
+++ b/configs/retrieval.yaml
@@ -10,3 +10,13 @@ threshold: 0.95 # threashold to compute (b)
 
 ckpt: last
 batch_size: 256
+
+defaults:
+  - data: babel-segmentation
+  - model: segmentation
+  # - trainer
+  - defaults
+  - _self_
+
+data:
+  preload: true
