--- a/configs/trainer.yaml
+++ b/configs/trainer.yaml
@@ -9,11 +9,14 @@ trainer:
   devices: [1]
 
   callbacks:
+    # NOTE: save every one epoch
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       filename: latest-{epoch}
       every_n_epochs: 1
+      # NOTE: keep only the best checkpoint based on the monitored metric (val_los)
       save_top_k: 1
       save_last: true
+    # NOTE: saves one checkpoint every 100 epochs (regardless of performance).
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       filename: latest-{epoch}
       monitor: step
