feat: multiclass segmentation

--- a/configs/model/start-end-segmentation.yaml
+++ b/configs/model/start-end-segmentation.yaml
@@ -6,7 +6,7 @@ defaults:
   - motion_encoder: stgcn
   - classifier: mlp
   - label_extractor: transition-based-start-end-without-majority
-  - window_positional_encoder: null
+  - window_positional_encoder: none
 
 classifier: ???
 motion_encoder: ???
