--- a/configs/train-start-end-segmentation.yaml
+++ b/configs/train-start-end-segmentation.yaml
@@ -1,5 +1,5 @@
-ckpt: last
-resume_dir: null
+ckpt: ${run_dir}/logs/checkpoints/bestbestbest.ckpt
+resume_dir: outputs/model=${hydra:runtime.choices.model}_pos=${hydra:runtime.choices.model/window_positional_encoder}_motion-encoder=${hydra:runtime.choices.model/motion_encoder}_label-extractor=${hydra:runtime.choices.model/label_extractor}_pretrained=${model.motion_encoder.pretrained}_classifier=${hydra:runtime.choices.model/classifier}_window-size=${data.window_size}
 
 run_dir: outputs/model=${hydra:runtime.choices.model}_pos=${hydra:runtime.choices.model/window_positional_encoder}_motion-encoder=${hydra:runtime.choices.model/motion_encoder}_label-extractor=${hydra:runtime.choices.model/label_extractor}_pretrained=${model.motion_encoder.pretrained}_classifier=${hydra:runtime.choices.model/classifier}_window-size=${data.window_size}
 
@@ -13,11 +13,9 @@ run_dir: outputs/model=${hydra:runtime.choices.model}_pos=${hydra:runtime.choice
 #   ++data.balanced=true \
 #   ++data.tiny=10000 \
 #   ++data.normalize=true \
-#   \
 #   model/classifier=mlp \
 #   model/motion_encoder=stgcn \
-#   ++model.motion_encoder.pretrained=true
-#   \
+#   ++model.motion_encoder.pretrained=true \
 #   resume_dir=...
 
 dataloader:
