--- a/configs/visualize-classification-results.yaml
+++ b/configs/visualize-classification-results.yaml
@@ -1,2 +1,4 @@
-run_dirs: ???
+run_dirs:
+  - /home/nadir/tmr-code/outputs/model=start-end-segmentation_pos=none_motion-encoder=stgcn_label-extractor=majority-based-start-end-with-majority_pretrained=False_classifier=mlp_window-size=20
+  - /home/nadir/tmr-code/outputs/model=start-end-segmentation_pos=none_motion-encoder=tmr_label-extractor=majority-based-start-end-with-majority_pretrained=False_classifier=mlp_window-size=20
 max_epochs: null
