--- a/configs/trainer.yaml
+++ b/configs/trainer.yaml
@@ -8,12 +8,17 @@ trainer:
   accelerator: gpu
   devices: [1]
 
+  profiler:
+    _target_: pytorch_lightning.profilers.SimpleProfiler
+    dirpath: ${run_dir}/logs
+    filename: profiling.txt
+
   callbacks:
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
       filename: best-{epoch}
       monitor: val_loss
       mode: min
-      save_top_k: 1
+      save_top_k: 16
       save_last: true
     # NOTE: save every one epoch
     - _target_: pytorch_lightning.callbacks.ModelCheckpoint
@@ -22,17 +27,9 @@ trainer:
       # NOTE: keep only the best checkpoint based on the monitored metric (val_los)
       save_top_k: 1
       save_last: true
-    # NOTE: saves one checkpoint every 100 epochs (regardless of performance).
-    - _target_: pytorch_lightning.callbacks.ModelCheckpoint
-      filename: latest-{epoch}
-      monitor: step
-      mode: max
-      every_n_epochs: 100
-      save_top_k: -1
-      save_last: false
     - _target_: pytorch_lightning.callbacks.early_stopping.EarlyStopping
       monitor: val_loss
-      patience: 512
+      patience: 16
       mode: min
       min_delta: 0.001
       verbose: true
